# SmartFileOrganizer

./: CMakeLists.txt  README.md
include/: utilities.h
src/: DuplicateChecker.cpp  DuplicateChecker.h  FileOrganizer.cpp  FileOrganizer.h  FileSearcher.cpp  FileSearcher.h  ReportGenerator.cpp  ReportGenerator.h  main.cpp
tests/: test_FileOrganizer.cpp
tests/Directory/TextFiles/: duplicate.txt  file2.txt
